# multiagent-automl

./: .gitignore  ds_star.py  main.py  pyproject.toml
agents/: agent.py  analyzer.py  coder.py  debugger.py  finalyzer.py  planner.py  router.py  verifier.py
agents/prompts/analyzer/: analyze.md
agents/prompts/coder/: next_code.md
agents/prompts/debugger/: bug_summary.md  debug_analyzer.md  debug_coder.md
agents/prompts/planner/: next_plan.md
agents/prompts/router/: route.md
agents/prompts/verifier/: verify.md
auto_eda/: ds_star.py
auto_eda/agents/: __init__.py  agent.py  analyzer.py  coder.py  debugger.py  finalyzer.py  planner.py  router.py  utils.py  verifier.py
auto_eda/agents/prompts/coder/: init_code.md
auto_eda/agents/prompts/finalyzer/: finalyze.md
auto_eda/agents/prompts/planner/: init_plan.md
data/: bert_model.py
utility/: chat_model.py  sandbox.py
